--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -24,3 +24,7 @@
        <p><a class="btn btn-success" href="http://webchat.freenode.net?channels=zftalk.2" target="_blank"><?php echo $this->translate('Ping us on IRC') ?> &raquo;</a></p>
    </div>
 </div>
+
+<?php foreach ($a1 as $value): ?>
+<?php echo  $value->getNome(); ?><br/>
+<?php endforeach; ?>
